# rust_painter

./: README.md
01_char_heart/: Cargo.toml  README.md
01_char_heart/src/: main.rs
02_spl_rasterizer/: .gitignore  Cargo.toml  README.md
02_spl_rasterizer/src/: main.rs  math.rs  scrbuf.rs
03_ol_renderer/: .gitignore  Cargo.toml  README.md
03_ol_renderer/examples/: path_tracing.rs  pathtracing.rs  whitted.rs
03_ol_renderer/src/: buf.rs  lib.rs  math.rs
03_ol_renderer/src/camera/: mod.rs  perspective.rs
03_ol_renderer/src/entity/: mod.rs  sphere.rs  triangle.rs
03_ol_renderer/src/light/: mod.rs  point.rs
03_ol_renderer/src/material/: combine.rs  cook_torrance.rs  diffuse_light.rs  fresnel.rs  metal.rs  mod.rs  phong.rs
03_ol_renderer/src/math/: color.rs  mat.rs  mod.rs  ray.rs  sample.rs
03_ol_renderer/src/math/model/: aabb.rs  mod.rs  ray.rs  sphere.rs  triangle.rs
03_ol_renderer/src/model/: aabb.rs  mod.rs  sphere.rs
03_ol_renderer/src/renderer/: mod.rs  path_tracing.rs  whitted.rs
03_ol_renderer/tests/: pathtracing.rs  whitted.rs  write_img.rs
